<resources>
    <string name="app_name">FilmMar</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Regístrate</string>
    <string name="login">Iniciar sesión</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Has iniciado sesión"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_categorias">Categorias</string>
</resources>
